--- a/style.css
+++ b/style.css
@@ -2,6 +2,46 @@
     box-sizing: border-box;
 }
 
-p {
-    font-size: 2rem;;
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+header {
+    grid-area: header;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    background-color: lightgray;
+}
+
+nav {
+    grid-area: nav;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, 1fr);
+    background-color: skyblue;
+}
+
+main {
+    grid-area: main;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: gray;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas:
+        "nav header header header"
+        "nav main main main"
+        "nav main main main"
+        "nav main main main";
+    height: 100%;
+    border: 3px solid magenta
+}
+
+
+header, nav, main {
+    border: 1px solid black;
 }
