--- a/style.css
+++ b/style.css
@@ -24,8 +24,6 @@ nav {
     color: white;
 }
     #logo {
-        justify-content: center;
-        align-items: center;
         font-size: 28px;
     }
 
@@ -35,10 +33,11 @@ nav {
         padding: 0;
     }
         nav li, #logo {
+            display: flex;
             font-size: 24px;
             font-weight: 700;
-            display: grid;
-            grid-template-columns: 1fr 4fr;
+            justify-content: flex-start;
+            align-items: center;
             padding: 10px;
         }
 
@@ -47,33 +46,34 @@ nav {
         }
 
         .dash-icon {
-            width: 75%;
-            justify-content: center;
-            height: auto;
+            width: 15%;
+        }
+        .nav-icon {
+            width: 7%;
         }
 
-        .nav-icon {
-            width: 40%;
+        .dash-icon, .nav-icon {
+            margin: 0px 20px;
+        }
+
+        .dash-icon, .nav-icon, .header-icon, #header-pic, #profile-pic, #title-pic {
             justify-content: center;
-            height: auto;
+            align-content: center;
         }
 
         .header-icon {
             width: 4%;
             margin: 0px 10px;
-            justify-content: center;
         }
 
         #header-pic {
             width: 7%;
             margin: 0px 20px;
-            justify-content: center;
         }
 
         #profile-pic {
             width: 10%;
             margin: 0px 10px;
-            justify-content: center;
         }
 
         #title-pic {
