--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    font-size: calc(12px + 0.25vw);
 }
 
 #container {
@@ -23,9 +24,6 @@ nav {
     background-color: #0ea5e9;
     color: white;
 }
-    #logo {
-        font-size: 28px;
-    }
 
     nav ul {
         list-style: none;
@@ -34,50 +32,45 @@ nav {
     }
         nav li, #logo {
             display: flex;
-            font-size: 24px;
+            font-size: calc(20px + 0.25vw);
             font-weight: 700;
             justify-content: flex-start;
             align-items: center;
-            padding: 10px;
+            padding: 10px 20px;
         }
 
         .icon {
             margin: 0px 20px;
         }
-
         .dash-icon {
-            width: 15%;
+            width: calc(40px + 0.25vw);
+          }
+          .nav-icon {
+            width: calc(20px + 0.25vw);
+          }
+        .dash-icon {
+            margin: 0px 10px;
         }
         .nav-icon {
-            width: 7%;
-        }
-
-        .dash-icon, .nav-icon {
             margin: 0px 20px;
         }
-
         .dash-icon, .nav-icon, .header-icon, #header-pic, #profile-pic, #title-pic {
             justify-content: center;
             align-content: center;
         }
 
         .header-icon {
-            width: 4%;
+            width: calc(20px + 0.25vw);  
             margin: 0px 10px;
         }
 
-        #header-pic {
-            width: 7%;
-            margin: 0px 20px;
-        }
-
         #profile-pic {
-            width: 10%;
+            width: calc(50px + 0.25vw);
             margin: 0px 10px;
         }
 
         #title-pic {
-            width: 10%;
+            width: calc(75px + 0.25vw);
             margin: 0px 20px;
         }
 
@@ -86,13 +79,12 @@ nav {
             justify-content: flex-end;
         }
             .project-icons > svg {
-                width: 6%;
+                width: calc(20px + 0.25vw);
                 margin: 20px 12.5px;
             }
 
         .trend-pic {
-            width: 15%;
-            height: 15%;
+            width: calc(40px + 0.25vw);
             margin: 0px 20px;
             justify-content: center;
         }
@@ -131,22 +123,21 @@ h3, h4, h5, h6 {
 
     }
         #search-bar {
-            width: 100%;
-            height: 40%;
+            width: 50vw;
             background-color: #e2e8f0;
             padding: 10px;
             border-radius: 15px;
             border: 1px solid #e2e8f0;
         }
     #profile-area {
-        justify-content: flex-end;
+        justify-content: center;
         margin: 0px 40px;
     }
         #profile-text {
             font-weight: bold;
         }
     #buttons-area {
-        justify-content: flex-end;
+        justify-content: end;
         padding: 10px;
     }
     #buttons-area {
@@ -155,7 +146,7 @@ h3, h4, h5, h6 {
         button {
             background-color: #0ea5e9;
             color: white;
-            font-size: 0.9rem;
+            font-size: calc(10px + 0.25vw);
             font-weight: bold;
             padding: 10px 30px;
             border-radius: 30px;
@@ -176,12 +167,12 @@ main {
     }
     #projects-area {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     }
     .project {
         display: grid;
         justify-content: center;
-        align-items: flex-start;
+        align-items: start;
         background-color: white;
         border-radius: 7.5px;
         border-left: 7.5px solid gold;
@@ -193,7 +184,7 @@ main {
             color: #6b7280;
         }
         .project-icons {
-            justify-self: flex-end;
+            justify-self: end;
         }
 
     #news-area {
@@ -202,7 +193,7 @@ main {
 
     .announcements {
         border: none;
-        font-size: 10pt;
+        font-size: calc(10px + 0.25vw);
     }
     .announcement:not(:last-child) {
         padding: 10px 0px;
@@ -215,7 +206,7 @@ main {
     }
 
     .project.trends, .project.trends > .icon {
-        justify-content: flex-start;
+        justify-content: start;
     }
 
     .trend-blurb {
