--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Almarai', sans-serif;
     font-size: calc(12px + 0.25vw);
 }
 
