changed color proprties to use :root+var() for more readable theme

--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
 }
 
+/* Colors from tailwindcss: https://tailwindcss.com/docs/customizing-colors */
+:root {
+    --tw-main-slate-200: #e2e8f0;
+    --tw-nav-sky-500: #0ea5e9;
+    --tw-border-amber-400: #fbbf24;
+    --tw-shadow-gray-300: #d1d5db;
+}
+
 html, body {
     height: 100vh;
     margin: 0;
@@ -15,7 +23,7 @@ nav {
     height: auto;
     grid-template-rows: 1fr 4fr 2.5fr 5fr;
     row-gap: 50px;
-    background-color: #0ea5e9;
+    background-color: var(--tw-nav-sky-500);
     color: white;
 }
 
@@ -24,7 +32,7 @@ header {
     background-color: white;
     grid-template-columns: 3fr 2fr;
     grid-template-rows: 2fr 3fr;
-    box-shadow: 0 5px 10px -5px #d1d5db;
+    box-shadow: 0 5px 10px -5px var(--tw-shadow-gray-300);
     z-index: 1;
 }
 
@@ -32,7 +40,7 @@ main {
     display: grid;
     grid-template-columns: 7fr 3fr;
     align-content: start;
-    background-color: #e2e8f0;
+    background-color: var(--tw-main-slate-200);
     
 }
 
@@ -41,7 +49,7 @@ p {
 }
 
 button {
-    background-color: #0ea5e9;
+    background-color: var(--tw-nav-sky-500);
     color: white;
     font-size: calc(10px + 0.25vw);
     font-weight: bold;
@@ -102,8 +110,8 @@ h3, h4, h5, h6 {
     align-items: start;
     background-color: white;
     border-radius: 7.5px;
-    border-left: 7.5px solid gold;
-    box-shadow: 2px 3px 4px #d1d5db;
+    border-left: 7.5px solid var(--tw-border-amber-400);
+    box-shadow: 2px 3px 4px var(--tw-shadow-gray-300);
     padding: 20px 40px;
     margin: 15px 15px;
 }
@@ -119,7 +127,7 @@ h3, h4, h5, h6 {
 
     .announcement:not(:last-child) {
         padding: 10px 0px;
-        border-bottom: 1px solid #d1d5db;
+        border-bottom: 1px solid var(--tw-shadow-gray-300);
       }
 
 .trends {
@@ -163,10 +171,10 @@ h3, h4, h5, h6 {
 #search-bar {
     width: 50vw;
     height: 3.75vh;
-    background-color: #e2e8f0;
+    background-color: var(--tw-main-slate-200);
     padding: 10px;
     border-radius: 15px;
-    border: 1px solid #e2e8f0;
+    border: 1px solid var(--tw-main-slate-200);
 }
 
 #profile-area {
